--- a/css/second.css
+++ b/css/second.css
@@ -1,5 +1,5 @@
 .carousel-item {
-    height: 60vh;
+    height: 100vh;
     min-height: 300px;
     background: no-repeat center center scroll;
     -webkit-background-size: cover;
@@ -7,7 +7,7 @@
 }
 
 .carousel-caption {
-    bottom: 160px;
+    bottom: 40%;
 }
 
 .carousel-caption h5 {
@@ -100,4 +100,10 @@
         line-height: 0.3;
         background: #fff;
     }
+}
+
+.footer-link {
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 0;
 }
